hphp/hack/test/typecheck/strict_switch/mixed_no_default.php.exp
File "mixed_no_default.php", line 4, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `default`, `true`, `false`, `null` (Typing[4019])
  File "mixed_no_default.php", line 4, characters 11-12:
  only unions and intersections of bool, null and enums can be switched on without a default
